--- a/css/main.scss
+++ b/css/main.scss
@@ -45,13 +45,13 @@ body, html {
   /* Text */
   /* Other */
 
-.multi-chat{
+.chat{
   width:100%;
   position:absolute;
   bottom:0;
 }
 
-.multi-chat > section{
+.chat > section{
   height:50%;
   opacity:1;
   box-sizing: border-box;
@@ -62,14 +62,14 @@ body, html {
   cursor:pointer;
 }
 
-.multi-chat .chat-meta,
-.multi-chat .chat-content{
+.chat .chat-meta,
+.chat .chat-content{
   height:100%;
   width:100%;
   display:block;
 }
 
-.multi-chat .chat-messages{
+.chat .chat-messages{
   opacity:.45;
 }
 
@@ -87,7 +87,7 @@ body, html {
 
 /* Chat Msgs */
 
-.multi-chat section.is-focused{
+.chat section.is-focused{
   opacity:1;
   font-size:.9rem;
   cursor:default;
@@ -116,7 +116,7 @@ section.is-focused .chat-messages{
   margin-right:5px;
 }
 
-.multi-chat .chat-messages{
+.chat .chat-messages{
   height:400px;
   padding:0 20px;
   border-top:1px solid $grey1;
@@ -126,17 +126,17 @@ section.is-focused .chat-messages{
   background-color:#fff;
 }
 
-@media only screen and (min-height: 700px){.multi-chat .chat-messages{ height:500px}}
-@media only screen and (min-height: 800px){.multi-chat .chat-messages{ height:600px}}
-@media only screen and (min-height: 1000px){.multi-chat .chat-messages{ height:800px}}
-@media only screen and (min-height: 1200px){.multi-chat .chat-messages{ height:1000px}}
+@media only screen and (min-height: 700px){.chat .chat-messages{ height:500px}}
+@media only screen and (min-height: 800px){.chat .chat-messages{ height:600px}}
+@media only screen and (min-height: 1000px){.chat .chat-messages{ height:800px}}
+@media only screen and (min-height: 1200px){.chat .chat-messages{ height:1000px}}
 
-.multi-chat .chat-messages li{
+.chat .chat-messages li{
   margin-bottom:1rem;
   line-height:1.6em;
 }
 
-.multi-chat .chat-messages li:first-of-type{
+.chat .chat-messages li:first-of-type{
   margin-top:2rem;
 }
 
@@ -175,7 +175,7 @@ section.is-focused .chat-messages{
 
 /* Chat Meta */
 
-.multi-chat .chat-meta{
+.chat .chat-meta{
   background-color:$slate;
   display:none;
 }
@@ -238,7 +238,7 @@ section.is-focused .header-name{
   display:none;
 }
 
-.multi-chat .meta-content{
+.chat .meta-content{
   display:none;
   margin:0;
   padding:20px;
